Compilation issues were fixed.