@@ -6,9 +6,6 @@ import com.jetbrains.youtrack.db.api.DatabaseSession;
 import com.jetbrains.youtrack.db.api.exception.CommitSerializationException;
 import com.jetbrains.youtrack.db.api.exception.DatabaseException;
 import com.jetbrains.youtrack.db.api.exception.SchemaException;
-import com.jetbrains.youtrack.db.api.query.Result;
-import com.jetbrains.youtrack.db.api.query.ResultSet;
-import com.jetbrains.youtrack.db.api.record.Entity;
 import com.jetbrains.youtrack.db.api.record.Identifiable;
 import com.jetbrains.youtrack.db.api.record.Vertex;
 import com.jetbrains.youtrack.db.api.schema.PropertyType;
@@ -19,7 +16,6 @@ import com.jetbrains.youtrack.db.internal.core.id.RecordId;
 import com.jetbrains.youtrack.db.internal.core.iterator.RecordIteratorClassDescendentOrder;
 import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import java.util.Collection;
-import java.util.List;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -27,117 +23,116 @@ public class DatabaseDocumentTxTest extends DbTestBase {
 
   @Test
   public void testCountClass() throws Exception {
+    var testSuperclass = session.getMetadata().getSchema().createClass("TestSuperclass");
+    session.getMetadata().getSchema().createClass("TestSubclass", testSuperclass);
 
-    var testSuperclass = db.getMetadata().getSchema().createClass("TestSuperclass");
-    db.getMetadata().getSchema().createClass("TestSubclass", testSuperclass);
-
-    db.begin();
-    var toDelete = ((EntityImpl) db.newEntity("TestSubclass")).field("id", 1);
+    session.begin();
+    var toDelete = ((EntityImpl) session.newEntity("TestSubclass")).field("id", 1);
     toDelete.save();
-    db.commit();
+    session.commit();
 
     // 1 SUB, 0 SUPER
-    Assert.assertEquals(1, db.countClass("TestSubclass", false));
-    Assert.assertEquals(1, db.countClass("TestSubclass", true));
-    Assert.assertEquals(0, db.countClass("TestSuperclass", false));
-    Assert.assertEquals(1, db.countClass("TestSuperclass", true));
+    Assert.assertEquals(1, session.countClass("TestSubclass", false));
+    Assert.assertEquals(1, session.countClass("TestSubclass", true));
+    Assert.assertEquals(0, session.countClass("TestSuperclass", false));
+    Assert.assertEquals(1, session.countClass("TestSuperclass", true));
 
-    db.begin();
+    session.begin();
     try {
-      ((EntityImpl) db.newEntity("TestSuperclass")).field("id", 1).save();
-      ((EntityImpl) db.newEntity("TestSubclass")).field("id", 1).save();
+      ((EntityImpl) session.newEntity("TestSuperclass")).field("id", 1).save();
+      ((EntityImpl) session.newEntity("TestSubclass")).field("id", 1).save();
       // 2 SUB, 1 SUPER
 
-      Assert.assertEquals(1, db.countClass("TestSuperclass", false));
-      Assert.assertEquals(3, db.countClass("TestSuperclass", true));
-      Assert.assertEquals(2, db.countClass("TestSubclass", false));
-      Assert.assertEquals(2, db.countClass("TestSubclass", true));
+      Assert.assertEquals(1, session.countClass("TestSuperclass", false));
+      Assert.assertEquals(3, session.countClass("TestSuperclass", true));
+      Assert.assertEquals(2, session.countClass("TestSubclass", false));
+      Assert.assertEquals(2, session.countClass("TestSubclass", true));
 
-      db.bindToSession(toDelete).delete();
+      session.bindToSession(toDelete).delete();
       // 1 SUB, 1 SUPER
 
-      Assert.assertEquals(1, db.countClass("TestSuperclass", false));
-      Assert.assertEquals(2, db.countClass("TestSuperclass", true));
-      Assert.assertEquals(1, db.countClass("TestSubclass", false));
-      Assert.assertEquals(1, db.countClass("TestSubclass", true));
+      Assert.assertEquals(1, session.countClass("TestSuperclass", false));
+      Assert.assertEquals(2, session.countClass("TestSuperclass", true));
+      Assert.assertEquals(1, session.countClass("TestSubclass", false));
+      Assert.assertEquals(1, session.countClass("TestSubclass", true));
     } finally {
-      db.commit();
+      session.commit();
     }
   }
 
   @Test
   public void testTimezone() {
 
-    db.set(DatabaseSession.ATTRIBUTES.TIMEZONE, "Europe/Rome");
-    var newTimezone = db.get(DatabaseSession.ATTRIBUTES.TIMEZONE);
+    session.set(DatabaseSession.ATTRIBUTES.TIMEZONE, "Europe/Rome");
+    var newTimezone = session.get(DatabaseSession.ATTRIBUTES.TIMEZONE);
     Assert.assertEquals("Europe/Rome", newTimezone);
 
-    db.set(DatabaseSession.ATTRIBUTES.TIMEZONE, "foobar");
-    newTimezone = db.get(DatabaseSession.ATTRIBUTES.TIMEZONE);
+    session.set(DatabaseSession.ATTRIBUTES.TIMEZONE, "foobar");
+    newTimezone = session.get(DatabaseSession.ATTRIBUTES.TIMEZONE);
     Assert.assertEquals("GMT", newTimezone);
   }
 
   @Test(expected = CommitSerializationException.class)
   public void testSaveInvalidRid() {
-    db.begin();
-    var doc = (EntityImpl) db.newEntity();
+    session.begin();
+    var doc = (EntityImpl) session.newEntity();
     doc.field("test", new RecordId(-2, 10));
-    db.save(doc);
-    db.commit();
+    session.save(doc);
+    session.commit();
   }
 
   @Test
   public void testCreateClass() {
-    var clazz = db.createClass("TestCreateClass");
+    var clazz = session.createClass("TestCreateClass");
     Assert.assertNotNull(clazz);
-    Assert.assertEquals("TestCreateClass", clazz.getName());
-    var superclasses = clazz.getSuperClasses();
+    Assert.assertEquals("TestCreateClass", clazz.getName(session));
+    var superclasses = clazz.getSuperClasses(session);
     if (superclasses != null) {
       assertTrue(superclasses.isEmpty());
     }
-    Assert.assertNotNull(db.getMetadata().getSchema().getClass("TestCreateClass"));
+    Assert.assertNotNull(session.getMetadata().getSchema().getClass("TestCreateClass"));
     try {
-      db.createClass("TestCreateClass");
+      session.createClass("TestCreateClass");
       Assert.fail();
     } catch (SchemaException ex) {
     }
 
-    var subclazz = db.createClass("TestCreateClass_subclass", "TestCreateClass");
+    var subclazz = session.createClass("TestCreateClass_subclass", "TestCreateClass");
     Assert.assertNotNull(subclazz);
-    Assert.assertEquals("TestCreateClass_subclass", subclazz.getName());
-    var sub_superclasses = subclazz.getSuperClasses();
+    Assert.assertEquals("TestCreateClass_subclass", subclazz.getName(session));
+    var sub_superclasses = subclazz.getSuperClasses(session);
     Assert.assertEquals(1, sub_superclasses.size());
-    Assert.assertEquals("TestCreateClass", sub_superclasses.get(0).getName());
+    Assert.assertEquals("TestCreateClass", sub_superclasses.getFirst().getName(session));
   }
 
   @Test
   public void testGetClass() {
-    db.createClass("TestGetClass");
+    session.createClass("TestGetClass");
 
-    var clazz = db.getClass("TestGetClass");
+    var clazz = session.getClass("TestGetClass");
     Assert.assertNotNull(clazz);
-    Assert.assertEquals("TestGetClass", clazz.getName());
-    var superclasses = clazz.getSuperClasses();
+    Assert.assertEquals("TestGetClass", clazz.getName(session));
+    var superclasses = clazz.getSuperClasses(session);
     if (superclasses != null) {
       assertTrue(superclasses.isEmpty());
     }
 
-    var clazz2 = db.getClass("TestGetClass_non_existing");
+    var clazz2 = session.getClass("TestGetClass_non_existing");
     Assert.assertNull(clazz2);
   }
 
   @Test
   public void testDocFromJsonEmbedded() {
-    Schema schema = db.getMetadata().getSchema();
+    Schema schema = session.getMetadata().getSchema();
 
     var c0 = schema.createClass("testDocFromJsonEmbedded_Class0");
 
     var c1 = schema.createClass("testDocFromJsonEmbedded_Class1");
-    c1.createProperty(db, "account", PropertyType.STRING);
-    c1.createProperty(db, "meta", PropertyType.EMBEDDED, c0);
+    c1.createProperty(session, "account", PropertyType.STRING);
+    c1.createProperty(session, "meta", PropertyType.EMBEDDED, c0);
 
-    db.begin();
-    var doc = (EntityImpl) db.newEntity("testDocFromJsonEmbedded_Class1");
+    session.begin();
+    var doc = (EntityImpl) session.newEntity("testDocFromJsonEmbedded_Class1");
 
     doc.updateFromJSON(
         "{\n"
@@ -152,14 +147,14 @@ public class DatabaseDocumentTxTest extends DbTestBase {
             + "\"data\": \"firstName=Jessica&lastName=Smith\"\n"
             + "}");
 
-    db.save(doc);
-    db.commit();
+    session.save(doc);
+    session.commit();
 
-    try (var result = db.query("select from testDocFromJsonEmbedded_Class0")) {
+    try (var result = session.query("select from testDocFromJsonEmbedded_Class0")) {
       Assert.assertEquals(0, result.stream().count());
     }
 
-    try (var result = db.query("select from testDocFromJsonEmbedded_Class1")) {
+    try (var result = session.query("select from testDocFromJsonEmbedded_Class1")) {
       Assert.assertTrue(result.hasNext());
       var item = result.next().getEntity().get();
       EntityImpl meta = item.getProperty("meta");
@@ -170,20 +165,20 @@ public class DatabaseDocumentTxTest extends DbTestBase {
 
   @Test
   public void testCreateClassIfNotExists() {
-    db.createClass("TestCreateClassIfNotExists");
+    session.createClass("TestCreateClassIfNotExists");
 
-    var clazz = db.createClassIfNotExist("TestCreateClassIfNotExists");
+    var clazz = session.createClassIfNotExist("TestCreateClassIfNotExists");
     Assert.assertNotNull(clazz);
-    Assert.assertEquals("TestCreateClassIfNotExists", clazz.getName());
-    var superclasses = clazz.getSuperClasses();
+    Assert.assertEquals("TestCreateClassIfNotExists", clazz.getName(session));
+    var superclasses = clazz.getSuperClasses(session);
     if (superclasses != null) {
       assertTrue(superclasses.isEmpty());
     }
 
-    var clazz2 = db.createClassIfNotExist("TestCreateClassIfNotExists_non_existing");
+    var clazz2 = session.createClassIfNotExist("TestCreateClassIfNotExists_non_existing");
     Assert.assertNotNull(clazz2);
-    Assert.assertEquals("TestCreateClassIfNotExists_non_existing", clazz2.getName());
-    var superclasses2 = clazz2.getSuperClasses();
+    Assert.assertEquals("TestCreateClassIfNotExists_non_existing", clazz2.getName(session));
+    var superclasses2 = clazz2.getSuperClasses(session);
     if (superclasses2 != null) {
       assertTrue(superclasses2.isEmpty());
     }
@@ -191,54 +186,54 @@ public class DatabaseDocumentTxTest extends DbTestBase {
 
   @Test
   public void testCreateVertexClass() {
-    var clazz = db.createVertexClass("TestCreateVertexClass");
+    var clazz = session.createVertexClass("TestCreateVertexClass");
     Assert.assertNotNull(clazz);
 
-    clazz = db.getClass("TestCreateVertexClass");
+    clazz = session.getClass("TestCreateVertexClass");
     Assert.assertNotNull(clazz);
-    Assert.assertEquals("TestCreateVertexClass", clazz.getName());
-    var superclasses = clazz.getSuperClasses();
+    Assert.assertEquals("TestCreateVertexClass", clazz.getName(session));
+    var superclasses = clazz.getSuperClasses(session);
     Assert.assertEquals(1, superclasses.size());
-    Assert.assertEquals("V", superclasses.get(0).getName());
+    Assert.assertEquals("V", superclasses.getFirst().getName(session));
   }
 
   @Test
   public void testCreateEdgeClass() {
-    var clazz = db.createEdgeClass("TestCreateEdgeClass");
+    var clazz = session.createEdgeClass("TestCreateEdgeClass");
     Assert.assertNotNull(clazz);
 
-    clazz = db.getClass("TestCreateEdgeClass");
+    clazz = session.getClass("TestCreateEdgeClass");
     Assert.assertNotNull(clazz);
-    Assert.assertEquals("TestCreateEdgeClass", clazz.getName());
-    var superclasses = clazz.getSuperClasses();
+    Assert.assertEquals("TestCreateEdgeClass", clazz.getName(session));
+    var superclasses = clazz.getSuperClasses(session);
     Assert.assertEquals(1, superclasses.size());
-    Assert.assertEquals("E", superclasses.get(0).getName());
+    Assert.assertEquals("E", superclasses.getFirst().getName(session));
   }
 
   @Test
   public void testVertexProperty() {
     var className = "testVertexProperty";
-    db.createClass(className, "V");
+    session.createClass(className, "V");
 
-    db.begin();
-    var doc1 = db.newVertex(className);
+    session.begin();
+    var doc1 = session.newVertex(className);
     doc1.setProperty("name", "a");
     doc1.save();
 
-    var doc2 = db.newVertex(className);
+    var doc2 = session.newVertex(className);
     doc2.setProperty("name", "b");
     doc2.setProperty("linked", doc1);
     doc2.save();
-    db.commit();
+    session.commit();
 
-    try (var rs = db.query("SELECT FROM " + className + " WHERE name = 'b'")) {
+    try (var rs = session.query("SELECT FROM " + className + " WHERE name = 'b'")) {
       Assert.assertTrue(rs.hasNext());
       var res = rs.next();
 
       var linkedVal = res.getProperty("linked");
       Assert.assertTrue(linkedVal instanceof Identifiable);
       Assert.assertTrue(
-          db.load(((Identifiable) linkedVal).getIdentity()) instanceof Identifiable);
+          session.load(((Identifiable) linkedVal).getIdentity()) instanceof Identifiable);
 
       Assert.assertTrue(res.asEntity().getProperty("linked") instanceof Vertex);
     }
@@ -248,25 +243,25 @@ public class DatabaseDocumentTxTest extends DbTestBase {
   public void testLinkEdges() {
     var vertexClass = "testVertex";
     var edgeClass = "testEdge";
-    var vc = db.createClass(vertexClass, "V");
-    db.createClass(edgeClass, "E");
-    vc.createProperty(db, "out_testEdge", PropertyType.LINK);
-    vc.createProperty(db, "in_testEdge", PropertyType.LINK);
+    var vc = session.createClass(vertexClass, "V");
+    session.createClass(edgeClass, "E");
+    vc.createProperty(session, "out_testEdge", PropertyType.LINK);
+    vc.createProperty(session, "in_testEdge", PropertyType.LINK);
 
-    db.begin();
-    var doc1 = db.newVertex(vertexClass);
+    session.begin();
+    var doc1 = session.newVertex(vertexClass);
     doc1.setProperty("name", "first");
     doc1.save();
-    db.commit();
+    session.commit();
 
-    db.begin();
-    var doc2 = db.newVertex(vertexClass);
+    session.begin();
+    var doc2 = session.newVertex(vertexClass);
     doc2.setProperty("name", "second");
     doc2.save();
-    db.newRegularEdge(db.bindToSession(doc1), doc2, "testEdge").save();
-    db.commit();
+    session.newRegularEdge(session.bindToSession(doc1), doc2, "testEdge").save();
+    session.commit();
 
-    try (var rs = db.query("SELECT out() as o FROM " + vertexClass)) {
+    try (var rs = session.query("SELECT out() as o FROM " + vertexClass)) {
       Assert.assertTrue(rs.hasNext());
       var res = rs.next();
 
@@ -280,30 +275,30 @@ public class DatabaseDocumentTxTest extends DbTestBase {
   public void testLinkOneSide() {
     var vertexClass = "testVertex";
     var edgeClass = "testEdge";
-    var vc = db.createClass(vertexClass, "V");
-    db.createClass(edgeClass, "E");
+    var vc = session.createClass(vertexClass, "V");
+    session.createClass(edgeClass, "E");
 
-    vc.createProperty(db, "out_testEdge", PropertyType.LINKBAG);
-    vc.createProperty(db, "in_testEdge", PropertyType.LINK);
+    vc.createProperty(session, "out_testEdge", PropertyType.LINKBAG);
+    vc.createProperty(session, "in_testEdge", PropertyType.LINK);
 
-    db.begin();
-    var doc1 = db.newVertex(vertexClass);
+    session.begin();
+    var doc1 = session.newVertex(vertexClass);
     doc1.setProperty("name", "first");
     doc1.save();
 
-    var doc2 = db.newVertex(vertexClass);
+    var doc2 = session.newVertex(vertexClass);
     doc2.setProperty("name", "second");
     doc2.save();
 
-    var doc3 = db.newVertex(vertexClass);
+    var doc3 = session.newVertex(vertexClass);
     doc3.setProperty("name", "third");
     doc3.save();
 
-    db.newRegularEdge(doc1, doc2, "testEdge").save();
-    db.newRegularEdge(doc1, doc3, "testEdge").save();
-    db.commit();
+    session.newRegularEdge(doc1, doc2, "testEdge").save();
+    session.newRegularEdge(doc1, doc3, "testEdge").save();
+    session.commit();
 
-    try (var rs = db.query("SELECT out() as o FROM " + vertexClass)) {
+    try (var rs = session.query("SELECT out() as o FROM " + vertexClass)) {
       Assert.assertTrue(rs.hasNext());
       var res = rs.next();
 
@@ -317,37 +312,37 @@ public class DatabaseDocumentTxTest extends DbTestBase {
   public void testLinkDuplicate() {
     var vertexClass = "testVertex";
     var edgeClass = "testEdge";
-    var vc = db.createClass(vertexClass, "V");
-    db.createClass(edgeClass, "E");
-    vc.createProperty(db, "out_testEdge", PropertyType.LINK);
-    vc.createProperty(db, "in_testEdge", PropertyType.LINK);
-    var doc1 = db.newVertex(vertexClass);
+    var vc = session.createClass(vertexClass, "V");
+    session.createClass(edgeClass, "E");
+    vc.createProperty(session, "out_testEdge", PropertyType.LINK);
+    vc.createProperty(session, "in_testEdge", PropertyType.LINK);
+    var doc1 = session.newVertex(vertexClass);
     doc1.setProperty("name", "first");
     doc1.save();
 
-    var doc2 = db.newVertex(vertexClass);
+    var doc2 = session.newVertex(vertexClass);
     doc2.setProperty("name", "second");
     doc2.save();
 
-    var doc3 = db.newVertex(vertexClass);
+    var doc3 = session.newVertex(vertexClass);
     doc3.setProperty("name", "third");
     doc3.save();
 
-    db.newRegularEdge(doc1, doc2, "testEdge");
-    db.newRegularEdge(doc1, doc3, "testEdge");
+    session.newRegularEdge(doc1, doc2, "testEdge");
+    session.newRegularEdge(doc1, doc3, "testEdge");
   }
 
   @Test
   public void selectDescTest() {
     var className = "bar";
-    Schema schema = db.getMetadata().getSchema();
+    Schema schema = session.getMetadata().getSchema();
     schema.createClass(className, 1, schema.getClass(SchemaClass.VERTEX_CLASS_NAME));
-    db.begin();
+    session.begin();
 
-    var document = (EntityImpl) db.newEntity(className);
+    var document = (EntityImpl) session.newEntity(className);
     document.save();
     var reverseIterator =
-        new RecordIteratorClassDescendentOrder<EntityImpl>(db, db, className, true);
+        new RecordIteratorClassDescendentOrder<EntityImpl>(session, session, className, true);
     Assert.assertTrue(reverseIterator.hasNext());
     Assert.assertEquals(document, reverseIterator.next());
   }
